force-app/main/default/objects/Payer__c/Payer__c.object-meta.xml
<CustomObject>
    <description>Reusable payer reference record for the HLS demo.</description>
    <label>Payer</label>
    <nameField>
        <label>Payer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>