force-app/main/default/objects/Payer__c/fields/External_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payer_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Payer ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>