force-app/main/default/objects/Payer__c/fields/Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>Payer_Type__c</fullName>
    <label>Payer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Assistance Program</fullName>
            </value>
            <value>
                <fullName>Patient Responsibility</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>